2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove patches.lisp.
	* src/interp/patches.lisp: Remove, move
	functionality to:
	src/interp/g-error.boot, src/interp/i-output.boot,
	src/interp/i-syscmd.boot, src/interp/setq.lisp,
	src/interp/util.lisp, src/interp/vmlisp.lisp.

	src/interp/bootlex.lisp, src/interp/compiler.boot,
	src/interp/define.boot, src/interp/i-toplev.boot,
	src/interp/lisplib.boot, src/interp/Makefile.in,
	src/interp/record.boot, src/interp/setvars.boot:
	Adjust.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove sys-pkg.lisp and axext_l.lisp.
	* src/interp/axext_l.lisp: remove, move content to
	src/interp/foam_l.lisp
	src/interp/sys-pkg.lisp: remove.
	src/interp/Makefile.in, src/interp/util.lisp:
	Adjust.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/category.boot, src/interp/util.lisp,
	src/interp/i-syscmd.boot, src/interp/pathname.boot,
	src/lisp/fricas-package.lisp: Misc cleanups.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/s-parser.boot,
	src/interp/cparse.boot, src/interp/bootlex.lisp:
	Make Spad and intepreter keywords closer.
	src/algebra/outform.spad.pamphlet: Remove 'div'.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/unittest.spad.pamphlet: Allow literal
	strings in input.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp: Correct a typo.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet,
	src/algebra/string.spad.pamphlet: Add two missing
	'convert'-s.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/database.boot, src/interp/patches.lisp,
	src/interp/msgdb.boot, src/interp/i-syscmd.boot,
	src/interp/setq.lisp, src/interp/lisplib.boot,
	src/interp/vmlisp.lisp, src/interp/clammed.boot,
	src/lib/cfuns-c.c, src/lib/Makefile.in:
	Misc cleanups.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
